--- a/postfix calculator/unit1.lfm
+++ b/postfix calculator/unit1.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
-  Left = 1379
-  Height = 229
-  Top = 168
+  Left = 1360
+  Height = 224
+  Top = 221
   Width = 320
   Caption = 'postfix calculator'
-  ClientHeight = 229
+  ClientHeight = 224
   ClientWidth = 320
   LCLVersion = '2.0.4.0'
   object RadioGroup1: TRadioGroup
@@ -207,12 +207,13 @@ object Form1: TForm1
     Top = 184
     Width = 68
     Caption = '='
+    OnClick = Button18Click
     TabOrder = 19
   end
   object Label1: TLabel
     Left = 192
     Height = 30
-    Top = 120
+    Top = 149
     Width = 87
     Caption = 'result'
     Font.CharSet = ANSI_CHARSET
@@ -238,5 +239,41 @@ object Form1: TForm1
     Font.Style = [fsItalic]
     ParentColor = False
     ParentFont = False
+  end
+  object RadioGroup2: TRadioGroup
+    Left = 180
+    Height = 65
+    Top = 88
+    Width = 122
+    AutoFill = True
+    Caption = 'input type'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 45
+    ClientWidth = 118
+    TabOrder = 20
+    object RadioButton3: TRadioButton
+      Left = 6
+      Height = 23
+      Top = 0
+      Width = 106
+      Caption = 'postfix'
+      Checked = True
+      TabOrder = 1
+      TabStop = True
+    end
+    object RadioButton4: TRadioButton
+      Left = 6
+      Height = 22
+      Top = 23
+      Width = 106
+      Caption = 'infix'
+      TabOrder = 0
+    end
   end
 end
